--- a/client/src/style/detail.css
+++ b/client/src/style/detail.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Jura:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+
 .detail {
 background-color: black;
 color:white;
@@ -46,7 +49,7 @@ color:white;
 margin: 20px;
 width: 250px;
 text-align: center;
-border-radius: 10px;
+border-radius:10px;
 transition: 1s;
 display: block;
 margin-left:auto;
