--- a/client/src/style/detail.css
+++ b/client/src/style/detail.css
@@ -1,12 +1,24 @@
-/* <<<<<<< HEAD
+
 .title-detail {
     margin-left: 30px;
 }
 
-/* .detail-pokemon {
+ .detail-pokemon {
     color: white;
     background-color: black;
-} */
+} 
+
+.back{
+    margin-left: -600px;
+    margin-top: 50px;
+    padding: 2px 6px;
+    background-color: white;
+    color:black;
+    border-radius: 5px;
+    border: none;
+}
+
+
 
 .det-img {
     display: block;
@@ -14,62 +26,20 @@
     height: 200px;
     margin-left: auto;
     margin-right: auto; 
+    margin-top: -70px;
 }
 
-
-@import url('https://fonts.googleapis.com/css2?family=Jura:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
-
-.detail {
-background-color: black;
-color:white;
+.content {
+    width: 1000px;
+    margin: auto;
 
     
 }
 
-.imge {
-background-color: #292929;
-color:white;
-margin: 20px;
-width: 250px;
-text-align: center;
-border-radius: 10px;
-transition: 1s;
-display: block;
-margin-left:auto;
-margin-right: auto;
-}
 
-
-
-
-.identité {
-font-family: 'Jura', sans-serif;
-background-color: #292929;
-color:white;
-margin: 20px;
-width: 250px;
-text-align: center;
-border-radius: 10px;
-transition: 1s;
-display: block;
-margin-right: auto;
-
-}
-.caracteristique{
-font-family: 'Jura', sans-serif;
-
-
-}
-.attaque {
-font-family: 'Courgette', cursive;
-background-color: #292929;
-color:white;
-margin: 20px;
-width: 250px;
-text-align: center;
-border-radius:10px;
-transition: 1s;
-display: block;
-margin-left:auto;
+.back:hover{
+    cursor: pointer;
+    background-color: transparent;
+    color: white;
+    
 }
